Fix subscribe button overflowing on mobile

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -251,3 +251,7 @@ strong strong {
 .fs-16, .fs-16 p {
   font-size: 16px !important;
 }
+
+.btn-text-break {
+  white-space: normal;
+}
